Fix additional info not showing

--- a/app/assets/stylesheets/module/_additional-info.css.scss
+++ b/app/assets/stylesheets/module/_additional-info.css.scss
@@ -11,6 +11,9 @@
 
   &.help {
     color: darken(white, 40%);
+    .js & {
+      display: inline-block;
+    }
   }
 
   .success & {
